feat: enhance CI workflow for Terraform validation
Improved the CI workflow by adding descriptive step names for better clarity.
- Organized steps for Terraform initialization, validation, and planning
- Ensured consistent working directory setup for Terraform commands

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,17 +2,34 @@ name: CI
 on:
   push:
     branches: [main]
-  pull_request: 
+  pull_request:
 
 jobs:
   terrafor_validate:
     runs-on: ubuntu-22.04
+    defaults:
+      run:
+        working-directory: ./infra
     steps:
-      - uses: actions/checkout@v3
-      - uses: hashicorp/setup-terraform@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.0
-      - run: terraform init
-      - run: terraform ftm -check
-      - run: terraform validate
-      - run: terraform plan -out=tfplan
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Validate
+        run: terraform validate
+
+      - name: Terraform Plan
+        run: terraform plan -out=tfplan
+
+      - name: Upload Terraform Plan
+        uses: actions/upload-artifact@v3
+        with:
+          name: terraform-plan
+          path: tfplan
