--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::091912642046:role/github-actions
+          aws-region: ap-southeast-1
+          
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
