--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on:
     branches: [main]
   pull_request:
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   terrafor_validate:
     runs-on: ubuntu-22.04
@@ -15,11 +19,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v4.3.1
         with:
           role-to-assume: arn:aws:iam::091912642046:role/github-actions
           aws-region: ap-southeast-1
-          
+
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
